# silicai

./: .gitignore  .gitmodules  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Makefile  README.md  docs-config.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: claude-issue-assessment.yml  docs.yml  publish.yml
docs/: example-project.md  getting-started.md  index.md  writing-circuits.md  writing-components.md
nets/: standard.yaml
schema/: component.schema.json
schema/defs/: pin_electrical.schema.json  rail.schema.json
src/silicai/: generate.py  import_kicad.py  mcp_server.py  validate.py
src/silicai/kicad/: __init__.py  layout.py  project.py  writer.py
src/silicai/schema/: circuit.schema.json  component.schema.json  project.schema.json
src/silicai/schema/defs/: alternate_function.schema.json  bus_signals.schema.json  circuit_bus.schema.json  circuit_bus_connection.schema.json  circuit_group.schema.json  circuit_instance.schema.json  circuit_power_rail.schema.json  interface.schema.json  measured_value.schema.json  passive_component.schema.json  pin.schema.json  pin_electrical.schema.json  pin_function.schema.json  power_consumption.schema.json  rail.schema.json  range_value.schema.json  rating.schema.json  relative_threshold.schema.json  specifications.schema.json  temperature_range.schema.json  timing.schema.json
tests/: test_generate.py  test_import.py  test_resolve.py  test_validate.py
tests/fixtures/: project.yaml
tests/fixtures/circuits/: mcu_passives.yaml  simple.yaml
tests/fixtures/components/: invalid_missing_pins.yaml  test_mcu_passives.yaml  valid_sensor.yaml
tools/: validate.py
