[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "silicai"
version = "0.1.0"
description = "Structured electronic component descriptions for AI-assisted circuit design"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "jsonschema",
    "referencing",
]

[project.scripts]
silicai-validate = "silicai.validate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
silicai = ["schema/**/*.json"]
