[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "silicai"
version = "0.1.0"
description = "Structured electronic component descriptions for AI-assisted circuit design"
readme = "README.md"
license = { text = "PolyForm-Noncommercial-1.0.0" }
requires-python = ">=3.11"
authors = [
    { name = "mageo services Sàrl", email = "info@mageo.ch" },
]
keywords = ["electronics", "eda", "kicad", "schematic", "ai", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Homepage = "https://github.com/mageoch/silicai"
Documentation = "https://mageoch.github.io/silicai/"
Repository = "https://github.com/mageoch/silicai"
"Bug Tracker" = "https://github.com/mageoch/silicai/issues"

dependencies = [
    "pyyaml",
    "jsonschema",
    "referencing",
    "kiutils",
]

[project.scripts]
silicai-validate = "silicai.validate:main"
silicai-generate = "silicai.generate:main"
silicai-import   = "silicai.import_kicad:main"
silicai-mcp      = "silicai.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
silicai = ["schema/**/*.json", "components/**/*.yaml"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "yamlfix",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.yamlfix]
explicit_start = false
preserve_quotes = true
section_whitelines = 1
line_length = 120

[project.optional-dependencies]
docs = [
    "json-schema-for-humans",
    "mkdocs",
    "mkdocs-material>=9.5,<9.6",
]
mcp = [
    "mcp>=1.0",
]
